--- a/src/ui/GameUI.ui
+++ b/src/ui/GameUI.ui
@@ -21,7 +21,7 @@
        <enum>QTabWidget::North</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="control_tab">
        <attribute name="title">
@@ -648,7 +648,7 @@
            <enum>QTabWidget::Rounded</enum>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>3</number>
           </property>
           <property name="elideMode">
            <enum>Qt::ElideNone</enum>
@@ -2140,7 +2140,7 @@
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="field_select_title">
           <property name="font">
            <font>
             <pointsize>15</pointsize>
@@ -2157,7 +2157,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="spinBox">
+         <widget class="QSpinBox" name="field_select_spinBox">
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
@@ -2206,21 +2206,21 @@
            </widget>
           </item>
           <item row="14" column="1">
-           <widget class="QLabel" name="label_48">
+           <widget class="QLabel" name="field_barracks_amount_label">
             <property name="text">
              <string>0</string>
             </property>
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QLabel" name="label_7">
+           <widget class="QLabel" name="field_nation_label">
             <property name="text">
-             <string>TextLabel</string>
+             <string>-</string>
             </property>
            </widget>
           </item>
           <item row="8" column="1">
-           <widget class="QLabel" name="label_19">
+           <widget class="QLabel" name="field_cavalry_amount_label">
             <property name="text">
              <string>0</string>
             </property>
@@ -2234,7 +2234,7 @@
            </widget>
           </item>
           <item row="7" column="1">
-           <widget class="QLabel" name="label_18">
+           <widget class="QLabel" name="field_infantry_amount_label">
             <property name="text">
              <string>0</string>
             </property>
@@ -2248,7 +2248,7 @@
            </widget>
           </item>
           <item row="13" column="1">
-           <widget class="QLabel" name="label_35">
+           <widget class="QLabel" name="field_market_amount_label">
             <property name="text">
              <string>0</string>
             </property>
@@ -2262,9 +2262,9 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLabel" name="label_6">
+           <widget class="QLabel" name="field_ressource_label">
             <property name="text">
-             <string>TextLabel</string>
+             <string>-</string>
             </property>
            </widget>
           </item>
@@ -2303,7 +2303,7 @@
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QLabel" name="label_53">
+           <widget class="QLabel" name="field_villager_amount_label">
             <property name="text">
              <string>0</string>
             </property>
@@ -2357,28 +2357,28 @@
            </widget>
           </item>
           <item row="12" column="1">
-           <widget class="QLabel" name="label_28">
+           <widget class="QLabel" name="field_towncenter_amount_label">
             <property name="text">
              <string>0</string>
             </property>
            </widget>
           </item>
           <item row="9" column="1">
-           <widget class="QLabel" name="label_20">
+           <widget class="QLabel" name="field_siege_amount_label">
             <property name="text">
              <string>0</string>
             </property>
            </widget>
           </item>
           <item row="15" column="1">
-           <widget class="QLabel" name="label_49">
+           <widget class="QLabel" name="field_wall_amount_label">
             <property name="text">
              <string>0</string>
             </property>
            </widget>
           </item>
           <item row="17" column="1">
-           <widget class="QLabel" name="label_51">
+           <widget class="QLabel" name="field_university_amount_label">
             <property name="text">
              <string>0</string>
             </property>
@@ -2406,14 +2406,14 @@
            </widget>
           </item>
           <item row="16" column="1">
-           <widget class="QLabel" name="label_50">
+           <widget class="QLabel" name="field_castle_amount_label">
             <property name="text">
              <string>0</string>
             </property>
            </widget>
           </item>
           <item row="6" column="1">
-           <widget class="QLabel" name="label_17">
+           <widget class="QLabel" name="field_archer_amount_label">
             <property name="text">
              <string>0</string>
             </property>
