--- a/src/ui/GameUI.ui
+++ b/src/ui/GameUI.ui
@@ -21,7 +21,7 @@
        <enum>QTabWidget::North</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="control_tab">
        <attribute name="title">
@@ -51,7 +51,7 @@
         <item>
          <widget class="QTabWidget" name="tabWidget_3">
           <property name="currentIndex">
-           <number>2</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="ressources_controlTab">
            <attribute name="title">
@@ -224,12 +224,9 @@
                      <item row="0" column="0">
                       <widget class="QLabel" name="label_54">
                        <property name="text">
-                        <string>Dofzentrum</string>
+                        <string>Feld</string>
                        </property>
                       </widget>
-                     </item>
-                     <item row="0" column="1">
-                      <widget class="QComboBox" name="villagers_develop_towncenter_comboBox"/>
                      </item>
                      <item row="1" column="0">
                       <widget class="QLabel" name="label_55">
@@ -240,6 +237,9 @@
                      </item>
                      <item row="1" column="1">
                       <widget class="QSpinBox" name="villagers_develop_amount_spinBox"/>
+                     </item>
+                     <item row="0" column="1">
+                      <widget class="QSpinBox" name="villagers_develop_field_spinBox"/>
                      </item>
                     </layout>
                    </item>
@@ -283,7 +283,7 @@
                       </widget>
                      </item>
                      <item row="0" column="1">
-                      <widget class="QSpinBox" name="villagers_move_amount_comboBox"/>
+                      <widget class="QSpinBox" name="villagers_move_amount_spinBox"/>
                      </item>
                      <item row="2" column="1">
                       <widget class="QSpinBox" name="villagers_move_from_spinBox"/>
@@ -677,8 +677,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>1036</width>
-                 <height>857</height>
+                 <width>227</width>
+                 <height>734</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -1044,8 +1044,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>1036</width>
-                 <height>857</height>
+                 <width>227</width>
+                 <height>734</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -1411,8 +1411,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>1036</width>
-                 <height>857</height>
+                 <width>227</width>
+                 <height>734</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_16">
