--- a/src/ui/GameUI.ui
+++ b/src/ui/GameUI.ui
@@ -16,6 +16,13 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
+     <widget class="QPushButton" name="refresh_btn">
+      <property name="text">
+       <string>Aktualisieren</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="tabPosition">
        <enum>QTabWidget::North</enum>
@@ -51,7 +58,7 @@
         <item>
          <widget class="QTabWidget" name="tabWidget_3">
           <property name="currentIndex">
-           <number>5</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="ressources_controlTab">
            <attribute name="title">
@@ -69,7 +76,7 @@
                  <x>0</x>
                  <y>0</y>
                  <width>1036</width>
-                 <height>785</height>
+                 <height>745</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_26">
